# ghc-instances

./: ghc-instances.cabal
src/Control/Instances/: GHC_Packages.hs
src/Control/Instances/Package/: Array.hs  Base.hs  Binary.hs  Bytestring.hs  Cabal.hs  Containers.hs  Deepseq.hs  Directory.hs  Filepath.hs  Ghc.hs  Ghc_boot.hs  Ghc_compact.hs  Ghc_prim.hs  Haskell2010.hs  Haskell98.hs  Hoopl.hs  Hpc.hs  Integer_gmp.hs  Old_locale.hs  Old_time.hs  Process.hs  Template_haskell.hs  Time.hs  Unix.hs  Win32.hs
