name:                ghc-instances
version:             0.1.0.0
synopsis:            Easily import all instances contained in GHC distributed libraries
description:
  This package simply has a few modules which import all the modules in GHC,
  with appropriate pre-processor directives that should allow this to work at least from
  GHC 7.8 to GHC 8.2.

  This can be useful if you've created a new class but you can define instances for it
  based on an existing class. Using this module, you can import all the instances
  that are distributed with GHC, and then use template haskell to create new instaces
  based on reifying the existing instances.
homepage:            https://github.com/clintonmead/ghc-instances#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Control.Instances.GHC_Packages,
    Control.Instances.Package.Array,
    Control.Instances.Package.Base,
    Control.Instances.Package.Binary,
    Control.Instances.Package.Bytestring,
    Control.Instances.Package.Cabal,
    Control.Instances.Package.Containers,
    Control.Instances.Package.Deepseq,
    Control.Instances.Package.Directory,
    Control.Instances.Package.Filepath,
    Control.Instances.Package.Ghc,
    Control.Instances.Package.Ghc_compact,
    Control.Instances.Package.Ghc_boot,
    Control.Instances.Package.Ghc_prim,
    Control.Instances.Package.Hoopl,
    Control.Instances.Package.Hpc,
    Control.Instances.Package.Integer_gmp,
    Control.Instances.Package.Process,
    Control.Instances.Package.Template_haskell,
    Control.Instances.Package.Time,
    Control.Instances.Package.Unix,
    Control.Instances.Package.Win32
  build-depends:
    array,
    base < 4.11,
    binary,
    bytestring,
    Cabal,
    containers,
    deepseq,
    directory,
    filepath,
    ghc,
    ghc-prim,
    hoopl,
    hpc,
    integer-gmp,
    process,
    template-haskell,
    time

  if (os(windows))
    build-depends:
      Win32
  else
    build-depends:
      unix

  if (impl(ghc >= 8.2))
    build-depends:
      ghc-compact

  if (impl(ghc >= 8))
    build-depends:
      ghc-boot

  if (impl(ghc < 7.10))
    build-depends:
      haskell98,
      haskell2010,
      old-locale,
      old-time

  ghc-options: -fno-warn-deprecations
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clintonmead/ghc-instances
